   will help in particular for larger notebooks with many notes.
 * Added some code to automatically upgrade your database when upgrading to a
   new Luminotes release. This applies to all Luminotes products.
 * Added code to support Luminotes discussion forums.
 * Laid some of the foundational groundwork for future tags support.

1.5.4: October 9, 2008
 * Fixed a visual bug in which clicking up or down to reorder your notebooks
   didn't display correctly.

1.5.3: October 9, 2008
 * Safari and Chrome web browsers are now supported (beta):
   * You can now create and end links.
   * Underline and strikethrough now work.
   * Pulldowns for search suggestions, importing, and exporting show up.
   * Pulldowns on inline images are now positioned correctly.
   * Uploading files now works reliably instead of just once.
   * Note resizing (growing and shrinking) works (mostly) as expected.
 * Improved page loading speed and fixed a rare session locking timeout bug
   by removing all implicit session locking.
 * Fixed a bug that broke the Luminotes Desktop product download page if
   PayPal took too long to notify Luminotes of the purchase.

1.5.2: October 1, 2008
 * Leading/trailing spaces in note titles are now ignored when making links
   to such notes. This means that creating a link titled "my note" to a note
   called "my note  " now works properly.
 * Leading/trailing spaces and newlines in note titles and contents are now
   stripped out when exporting to CSV.
 * Fixed a bug in which clicking the "export" link when the current note was
   unsaved did not open the export pulldown.
 * Changed the warning about Safari/Chrome/Opera incompatibility to be an
   in-page message instead of a popup alert so as to be slightly less
   obnoxious.

1.5.1: September 28, 2008
 * Implemented CSV exporting, so now you can export all of your notes to a
   CSV spreadsheet file. This currently doesn't include revision history or
   attached files.