@@ -22,6 +22,7 @@ settings = {
     "server.socket_port": socket_port,
     "server.socket_host": "localhost",
     "server.thread_pool": 4,
+    "session_filter.storage_class": None,
     "session_filter.storage_type": "ram",
     "session_filter.timeout": 60 * 24 * 365, # one year
     "static_filter.root": os.getcwd(),
